# Tablr

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  conanfile.py  mkdocs.yml  pyproject.toml  vcpkg.json  xmake.lua
.github/workflows/: ci-conan-vcpkg-xmake.yml  ci.yml  docs.yml  release.yml  test.yml
docs/: contributing.md  index.md  license.md
docs/api/: c-api.md  cpp-api.md  creation.md  device.md  filtering.md  grouping.md  io.md  merging.md  operations.md  sorting.md
docs/examples/: advanced.md  basic.md  complete.md  csv.md
docs/getting-started/: build-with-conan-vcpkg-xmake.md  concepts.md  installation.md  quickstart.md
examples/: CMakeLists.txt  basic_usage.c  example_aggregation.c  example_cpp.cpp  example_csv.c  example_device.c  example_device_switching.c  example_filtering.c  example_sorting.c
include/tablr/: tablr.h  tablr.hpp
include/tablr/core/: dataframe.h  series.h  types.h
include/tablr/device/: cuda_ops.h  device.h  npu_ops.h  tpu_ops.h  xpu_ops.h
include/tablr/io/: csv.h
include/tablr/ops/: filter.h  groupby.h  merge.h  sort.h
src/: tablr.c  tablr.cpp
src/core/: dataframe.c  series.c  types.c
src/device/: cuda_ops.cu  device.c  npu_ops.c  tpu_ops.c  xpu_ops.cpp
src/io/: csv.c
src/ops/: filter.c  groupby.c  merge.c  sort.c
tests/: CMakeLists.txt  test_tablr.c
